# jh_facial_recog_lock

./: .env  .gitignore  LICENSE  README.md  README.rst  frserver.py  requirements.txt  setup.cfg  tox.ini
src/jh_facial_recog_lock/: frclient.py  frserver.py
tests/: sms_test.py
