[metadata]
name = jh_facial_recog_lock
version = 0.0.1
license = MIT
description = Facial Recognition Lock/Alert System for Embedded Systems Development Lab, Johns Hopkins University
long_description = file: README.md
author = Joshua Rothe
author_email = jrothe1@jh.edu
classifiers=
   Intended Audience :: Education
   License :: OSI Approved :: MIT License
   Natural Language :: English
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   python-dotenv
   twilio
   pyzmq

[options.packages.find]
where=src